--- a/buttons.html
+++ b/buttons.html
@@ -1,5 +1,5 @@
 <style>
-    button {
+    .subscribe-button {
         background-color: rgb(200,0,0);
         color: white;
         border: none;
@@ -7,9 +7,34 @@
         width: 105px;
         cursor: pointer;
         border-radius: 2px;
+        margin-right: 8px;
+    }
+    .join-button {
+        background-color: white;
+        border-color: rgb(41, 118, 211);
+        color: rgb(41, 118, 211);
+        width: 62px;
+        border-radius: 2px;
+        cursor: pointer;
+        height: 36px;
+        border-style: solid;
+        border-width: 1px;
+    }
+    .tweet-button{
+        height: 36px;
+        background-color: rgb(2, 158, 255);
+        color: white;
+        width: 100px;
+        border-radius: 18px;
+        margin-left: 8px;
+        cursor: pointer;
+        font-size: 15px;
+        font-weight: bold;
+        border:none;
+
     }
 </style>
 
-<button>SUBSCRIBE</button>
-<button>JOIN</button>
-<button>Tweet</button>
+<button class="subscribe-button">SUBSCRIBE</button>
+<button class="join-button">JOIN</button>
+<button class="tweet-button">Tweet</button>
