--- a/buttons.html
+++ b/buttons.html
@@ -3,26 +3,41 @@
         background-color: rgb(200,0,0);
         color: white;
         border: none;
-        height: 36px;
-        width: 105px;
         cursor: pointer;
         border-radius: 2px;
         margin-right: 8px;
+        transition: opacity 0.15s;
+        padding: 10px 16px;
+        vertical-align: top;
+    }
+    .subscribe-button:hover{
+        opacity: 0.8;
+    }
+    .subscribe-button:active{
+        opacity: 0.5;
     }
     .join-button {
         background-color: white;
-        border-color: rgb(41, 118, 211);
-        color: rgb(41, 118, 211);
-        width: 62px;
+        border-color: rgb(6, 95, 212);
+        color: rgb(6, 95, 212);
         border-radius: 2px;
         cursor: pointer;
-        height: 36px;
         border-style: solid;
         border-width: 1px;
+        transition: background-color 0.15s, color 0.15s;
+        padding: 9px 16px;
+        vertical-align: top;
+    }
+    .join-button:hover{
+        color: white;
+        background-color: rgb(6, 95, 212);
+    }
+    .join-button:active{
+        opacity: 0.7;
     }
     .tweet-button{
         height: 36px;
-        background-color: rgb(2, 158, 255);
+        background-color: rgb(29, 155, 240);
         color: white;
         width: 100px;
         border-radius: 18px;
@@ -31,6 +46,12 @@
         font-size: 15px;
         font-weight: bold;
         border:none;
+        transition: box-shadow 0.15s;
+        vertical-align: top;
+        
+    }
+    .tweet-button:hover{
+        box-shadow: 5px 5px 10px rgba(0,0,0,0.15);
 
     }
 </style>
