--- a/text.html
+++ b/text.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,11 +8,15 @@
     <link rel="stylesheet" href="./styles/text.css">
     <title>Document</title>
 </head>
+
 <body>
     <p class="video-title">Talking Tech and AI with Google CEO Sundar Pichai!</p>
     <p class="video-stats">3.4M Views &middot; 6 months ago</p>
     <p class="video-author">Marques Brownlee &check;</p>
-    <p class="video-description">Talking tech and AI on the heels of Google I/O. Also a daily driver phone reveal from Google's CEO. Shoutout to Sundar!</p>
-    <p class="apple-text">Shop early for the best selection of holiday favourites. <span class="shop-now">Shop now &gt;</span></p>
+    <p class="video-description">Talking tech and AI on the heels of Google I/O. Also a daily driver phone reveal from
+        Google's CEO. Shoutout to Sundar!</p>
+    <p class="apple-text">Shop early for the best selection of holiday favourites. <span class="shop-now">Shop now
+            &gt;</span></p>
 </body>
+
 </html>
