--- a/youtube.html
+++ b/youtube.html
@@ -19,13 +19,29 @@
             display: block;
         }
 
+        .video-stats,
+        .video-author {
+            color: rgb(96,96,96);
+            font-size: 12px;
+        }
 
-        .video-author {}
+        .video-author{
+            margin-bottom: 6px;
+        }
+        p{
+            font-family: 'Roboto', Arial;
+            margin-top: 0;
+            margin-bottom: 0;
 
-        .video-stas {}
+        }
 
+        
         .video-title {
             margin-top: 0;
+            font-size: 14px;
+            font-weight: 500;
+            line-height: 20px;
+            margin-bottom: 12px;
         }
 
         .video-preview {
