--- a/youtube.html
+++ b/youtube.html
@@ -95,11 +95,24 @@
 
     </div>
     <div class="video-preview">
-        <img class="thumbnail" src="./thumbnails/thumbnail-2.webp" alt="">
-        <p class="video-title">
+        <div class="thumbnail-row">
+
+            <img class="thumbnail" src="./thumbnails/thumbnail-2.webp" alt="">
+        </div>
+        <div >
+            <div class="channel-picture">
+                <img class="profile-picture" src="./channel-picture/channel-2.jpeg" alt="">
+            </div>
+            <div class="video-info">
+
+                <p class="video-title">
+                    
             Try Not To Laugh Challenge #9</p>
-        <p class="video-author">Markiplier</p>
-        <p class="video-stats">19M views &middot; 4 years ago</p>
+                <p class="video-author">Markiplier</p>
+                <p class="video-stats">19M views &middot; 4 years ago</p>
+            </div>
+
+        </div>
 
     </div>
 </body>
